--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -6,6 +6,6 @@ env          =  PYTHONUSERBASE=%(project_dir)/py-env
 chdir        =  %(project_dir)
 
 http-socket  = :5000
-plugin       = python
+plugin       = python2
 module       = app
 callable     = app
